More fixing image offset on mobiles

--- a/landingpage.css
+++ b/landingpage.css
@@ -1,8 +1,6 @@
 img[id$='bg'] {
     height: 100%;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
   }
